--- a/style.css
+++ b/style.css
@@ -19,36 +19,35 @@ body {
   box-shadow: 15 15 50px rgb(0 0 0 / 20%);
   font-family: "Outfit", sans-serif;
   flex-direction: column;
-  font-size: 15px;
   border-radius: 5%;
   margin: 5px;
   padding: 15px;
-  width: 220px;
+  width: 270px;
+  height: 410px;
   text-align: center;
   align-items: center;
   position: relative;
   top: 15vh;
-  height: 21.5rem;
 }
 
 .card > img {
-  width: 225px;
+  width: 265px;
   border-radius: 5%;
   position: relative;
-  bottom: .3rem;
 }
 
 .card #title {
-  width: 185px;
+  width: 230px;
   font-weight: 700;
+  font-size: 17px;
   position: relative;
   bottom: 2px;
 }
 
 .card #description {
-  width: 195px;
+  width: 225px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 15px;
   opacity: 0.5;
   position: relative;
   bottom: 15px;
