--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .container {
   display: grid;
   justify-items: center;
-  height: 95vh;
+  height: 100vh;
 }
 
 .card {
@@ -22,30 +22,29 @@ body {
   border-radius: 5%;
   margin: 5px;
   padding: 15px;
-  width: 270px;
-  height: 410px;
+  width: 300px;
+  height: 450px;
   text-align: center;
   align-items: center;
   position: relative;
-  top: 15vh;
+  top: 20vh;
 }
 
 .card > img {
-  width: 265px;
+  width: 300px;
   border-radius: 5%;
   position: relative;
 }
 
 .card #title {
-  width: 230px;
+  width: 260px;
   font-weight: 700;
-  font-size: 17px;
+  font-size: 120%;
   position: relative;
-  bottom: 2px;
 }
 
 .card #description {
-  width: 225px;
+  width: 250px;
   font-weight: 400;
   font-size: 15px;
   opacity: 0.5;
