--- a/style.css
+++ b/style.css
@@ -22,34 +22,34 @@ body {
   border-radius: 5%;
   margin: 5px;
   padding: 15px;
-  width: 300px;
-  height: 480px;
+  width: 280px;
+  height: 450px;
   text-align: center;
   align-items: center;
   position: relative;
-  top: 18vh;
+  top: 19vh;
 }
 
 .card > img {
-  width: 280px;
+  width: 275px;
   border-radius: 5%;
   position: relative;
 }
 
 .card #title {
-  width: 260px;
+  width: 265px;
   font-weight: 700;
   font-size: 120%;
   position: relative;
+  top: 15px;
 }
 
 .card #description {
-  width: 250px;
+  width: 200px;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 14px;
   opacity: 0.5;
   position: relative;
-  bottom: 15px;
 }
 
 .attribution { 
