--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   box-shadow: 15 15 50px rgb(0 0 0 / 20%);
   font-family: "Outfit", sans-serif;
   flex-direction: column;
-  border-radius: 3%;
+  border-radius: 1%;
   margin: 5px;
   padding: 15px;
   width: 290px;
@@ -32,7 +32,7 @@ body {
 
 .card > img {
   width: 290px;
-  border-radius: 3%;
+  border-radius: 1%;
   position: relative;
 }
 
@@ -47,9 +47,10 @@ body {
 .card #description {
   width: 235px;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 14px;
   opacity: 0.5;
   position: relative;
+  top: 10px;
 }
 
 .attribution { 
