--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
 .card {
   display: flex;
   background-color: white;
-  box-shadow: 0 1px 3px #555;
+  box-shadow: 0 0 1px #999;
   font-family: "Outfit", sans-serif;
   flex-direction: column;
-  border-radius: 2.5%;
+  border-radius: 3.5%;
   margin: 5px;
   padding: 15px;
   width: 290px;
@@ -32,7 +32,7 @@ body {
 
 .card > img {
   width: 290px;
-  border-radius: 2.5%;
+  border-radius: 3.5%;
   position: relative;
 }
 
