--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .card {
   display: flex;
   background-color: white;
-  box-shadow: 0 10px 15px #AAA;
+  box-shadow: 0 10px 15px hsl(212deg 45% 79%);
   font-family: "Outfit", sans-serif;
   flex-direction: column;
   border-radius: 4%;
